--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/Vanilla@1x-1.8s-280px-250px.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
