--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "water-ro-app",
-    "slug": "water-ro-app",
+    "name": "Doshion TechCenter",
+    "slug": "Doshion TechCenter",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/logo.png",
