--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.3",
-    "expo": "^52.0.11",
+    "expo": "~52.0.24",
     "expo-constants": "~17.0.3",
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
