--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
+    "expo-print": "~14.0.2",
     "expo-router": "~4.0.9",
     "expo-sharing": "~13.0.0",
-    "expo-splash-screen": "~0.29.13",
+    "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
@@ -44,9 +45,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "15.8.0",
+    "react-native-video": "^6.9.1",
     "react-native-web": "~0.19.13",
-    "expo-print": "~14.0.2"
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
